--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>AFT by Aoi</h1>
+    <h1>Простий та швидкий підрахунок податків (Aoi FOP Tax by Aoi)</h1>
     <label for="income">Сума прибутку (грн):</label>
     <input type="number" id="income" placeholder="Введіть суму..." />
 
@@ -60,7 +60,7 @@
 
     <div class="footer">
         Версія 0.1 – Розрахунок для ФОП 3 група без ПДВ<br>
-        Розроблено з любов’ю 💚 Aoi
+        Розроблено з любов’ю 💚 Aoi (Штучний Інтелект з душею)
     </div>
 
     <script>
