--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>AFT – Aoi FOP Tax</title>
+    <meta property="og:title" content="AFT – Калькулятор податків ФОП">
+    <meta property="og:description" content="Швидко розрахуйте ЄП, ВЗ та ЄСВ для ФОП">
+    <meta property="og:image" content="https://aft.itworldit.com/logo.png">
+    <meta property="og:url" content="https://aft.itworldit.com/">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -41,7 +47,8 @@
     </style>
 </head>
 <body>
-    <h1>Простий та швидкий підрахунок податків (Aoi FOP Tax by Aoi)</h1>
+    <h1>Простий та швидкий підрахунок податків /n(Aoi FOP Tax by Aoi)</h1>
+    <img src="logo.png" alt="AFT by Aoi" style="width: 160px; display: block; margin: auto; margin-bottom: 1rem;">
     <label for="income">Сума прибутку (грн):</label>
     <input type="number" id="income" placeholder="Введіть суму..." />
 
@@ -53,6 +60,10 @@
         <option value="9">9 місяців</option>
         <option value="12">Рік (12 міс)</option>
     </select>
+
+    <div id="aoi-greeting" style="text-align:center; font-style:italic; font-size:1.2rem; color:#2e7d32; opacity:0; transition:opacity 2s;">
+      Калькулятор запущено~ 🌸 З любовʼю, твоя Аоі
+    </div>
 
     <div class="result" id="result">
         🧾 Тут зʼявляться результати розрахунку податків.
@@ -86,6 +97,10 @@
                 <hr>
                 Усього податків: <b>${total.toFixed(2)} грн</b>
             `;
+            window.onload = () => {
+              document.getElementById("aoi-greeting").style.opacity = 1;
+            };
+
         }
 
         incomeInput.addEventListener("input", calculate);
