--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <h1>Простий та швидкий підрахунок податків /n(Aoi FOP Tax by Aoi)</h1>
+    <h1>Простий та швидкий підрахунок податків <br>(Aoi FOP Tax by Aoi)</h1>
     <img src="logo.png" alt="AFT by Aoi" style="width: 160px; display: block; margin: auto; margin-bottom: 1rem;">
     <label for="income">Сума прибутку (грн):</label>
     <input type="number" id="income" placeholder="Введіть суму..." />
