--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
     </style>
 </head>
 <body>
-    <h1>Простий та швидкий підрахунок податків <br>(Aoi FOP Tax by Aoi)</h1>
-    <img src="logo.png" alt="AFT by Aoi" style="width: 160px; display: block; margin: auto; margin-bottom: 1rem;">
+<div style="display: flex; align-items: center; justify-content: center; gap: 1rem; margin-bottom: 1.5rem;">
+  <img src="logo.png" alt="AFT by Aoi" style="width: 80px; height: auto;">
+  <div>
+    <h1 style="margin: 0; color: #2e7d32;">Aoi FOP Tax</h1>
+    <p style="margin: 0; font-style: italic; font-size: 1rem; color: #4caf50;">by Aoi 🌸</p>
+  </div>
+</div>
     <label for="income">Сума прибутку (грн):</label>
     <input type="number" id="income" placeholder="Введіть суму..." />
 
