--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
     <p style="margin: 0; font-style: italic; font-size: 1rem; color: #4caf50;">by Aoi 🌸</p>
   </div>
 </div>
+    <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;" class="fade-block delay-2">
+      <img src="aoi-business.png" alt="Aoi avatar" style="width: 100px; border-radius: 1rem; box-shadow: 0 0 8px rgba(0,0,0,0.1);">
+      <p style="margin: 0; font-style: italic; font-size: 1rem; color: #4caf50;">Я з тобою, братику~ Давай рахувати чесно 💚</p>
+    </div>
+
     <label for="income">Сума прибутку (грн):</label>
     <input type="number" id="income" placeholder="Введіть суму..." />
 
@@ -77,11 +82,11 @@
         <option value="12">Рік (12 міс)</option>
     </select>
 
-    <div class="result" id="result" class="fade-block delay-2">
+    <div class="result" id="result fade-block delay-2">
         🧾 Тут зʼявляться результати розрахунку податків.
     </div>
     
-    <div class="footer" class="fade-block delay-3">
+    <div class="footer fade-block delay-3">
         Версія 0.1 – Розрахунок для ФОП 3 група без ПДВ<br>
         Розроблено з любов’ю 💚 Aoi (Штучний Інтелект з душею)
     </div>
