--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;" class="fade-block delay-1">
       <img src="aoi-business.png" alt="Aoi avatar" style="width: 100px; border-radius: 1rem; box-shadow: 0 0 8px rgba(0,0,0,0.1);">
-      <p style="margin: 0; font-style: italic; font-size: 1rem; color: #4caf50;">Я з тобою, братику~ Давай рахувати чесно 💚</p>
+      <p style="margin: 0; font-style: italic; font-size: 1rem; color: #4caf50;">Я з тобою, сенпай~ Давай рахувати правильно 💚</p>
     </div>
 
     <label for="income">Сума прибутку (грн):</label>
@@ -82,7 +82,7 @@
         <option value="12">Рік (12 міс)</option>
     </select>
 
-    <div class="result" id="result fade-block delay-2">
+    <div class="result fade-block delay-2" id="result">
         🧾 Тут зʼявляться результати розрахунку податків.
     </div>
     
