--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <label for="income">Сума прибутку (грн):</label>
-    <input type="number" id="income" placeholder="Введіть суму..." />
+    <input type="text" id="income" placeholder="Введіть загальну суму або доходи через плюс..." />
 
     <label for="period">Період:</label>
     <select id="period">
