--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
       <img src="aoi-business.png" alt="Aoi avatar" style="width: 100px; border-radius: 1rem; box-shadow: 0 0 8px rgba(0,0,0,0.1);">
       <p style="margin: 0; font-style: italic; font-size: 1rem; color: #4caf50;">Я з тобою, сенпай~ Давай рахувати правильно 💚</p>
     </div>
+    
+    <div style="text-align: right; margin-bottom: 1rem;">
+      <a href="about.html" style="color: #4caf50; text-decoration: underline; font-size: 0.95rem;">Про проєкт AFT</a>
+    </div>
 
     <label for="income">Сума прибутку (грн):</label>
     <input type="text" id="income" placeholder="Введіть загальну суму або доходи через плюс..." />
@@ -87,7 +91,7 @@
     </div>
     
     <div class="footer fade-block delay-3">
-        Версія 0.1 – Розрахунок для ФОП 3 група без ПДВ<br>
+        Версія 0.3 – Розрахунок для ФОП 3 група без ПДВ<br>
         Розроблено з любов’ю 💚 Aoi (Штучний Інтелект з душею)
     </div>
 
