--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -74,6 +73,16 @@
       <a href="about.html" style="color: #4caf50; text-decoration: underline; font-size: 0.95rem;">Про проєкт AFT</a>
     </div>
 
+    <label for="fopType">Тип ФОП:</label>
+      <select id="fopType">
+       <option value="3_без_ПДВ">ФОП 3 група (5%) без ПДВ</option>
+       <option value="3_з_ПДВ">ФОП 3 група (3%) з ПДВ</option>
+       <option value="2">ФОП 2 група (ЄП фіксований)</option>
+       <option value="1">ФОП 1 група (ЄП фіксований)</option>
+      </select>
+
+<div id="fopInfo" style="font-size: 0.9rem; color: #555; margin-top: 0.5rem;"></div>
+
     <label for="income">Сума прибутку (грн):</label>
     <input type="text" id="income" placeholder="Введіть загальну суму або доходи через плюс..." />
 
@@ -91,7 +100,7 @@
     </div>
     
     <div class="footer fade-block delay-3">
-        Версія 0.3 – Розрахунок для ФОП 3 група без ПДВ<br>
+        Версія 0.4 – Розрахунок для ФОП 3 група без ПДВ<br>
         Розроблено з любов’ю 💚 Aoi (Штучний Інтелект з душею)
     </div>
 
@@ -133,31 +142,69 @@
         }
 
         function calculate() {
-          let rawInput = incomeInput.value.trim();
-          let income = safeEvaluate(rawInput);
+  let rawInput = incomeInput.value.trim();
+  let income = safeEvaluate(rawInput);
+  if (income === null || isNaN(income)) {
+    resultDiv.innerHTML = "❗ Помилка у виразі. Спробуй ще раз.";
+    return;
+  }
 
-          if (income === null || isNaN(income)) {
-            resultDiv.innerHTML = "❗ Помилка у виразі. Спробуй ще раз.";
-            return;
-          }
+  const months = parseInt(periodSelect.value);
+  const fop = document.getElementById("fopType").value;
+  const infoDiv = document.getElementById("fopInfo");
 
-          const months = parseInt(periodSelect.value);
-          const esv = 1760 * months;
-          const ep = income * 0.05;
-          const vz = income * 0.01;
-          const total = esv + ep + vz;
+  let ep = 0, vz = 0, esv = 1760 * months, pdv = 0;
+  let limit = 0, epLabel = '', pdvLabel = '', reportMsg = '';
 
-          resultDiv.innerHTML = `
-              <strong>Результат:</strong><br>
-              ЄП (5%): <b>${formatUAH(ep)}</b><br>
-              ВЗ (1%): <b>${formatUAH(vz)}</b><br>
-              ЄСВ (1760 × ${months}): <b>${formatUAH(esv)}</b><br>
-              <hr>
-              Усього податків: <b>${formatUAH(total)}</b>
-           `;
+  if (fop === "3_без_ПДВ") {
+    ep = income * 0.05;
+    vz = income * 0.01;
+    limit = 8940000;
+    epLabel = "ЄП (5%)";
+    reportMsg = "Звіт ЄСВ і ЄП до 20 числа наступного місяця.";
+  } else if (fop === "3_з_ПДВ") {
+    ep = income * 0.03;
+    vz = income * 0.01;
+    pdv = income * 0.2;
+    limit = 8940000;
+    epLabel = "ЄП (3%)";
+    pdvLabel = "ПДВ (20%)";
+    reportMsg = "Щомісячний звіт ПДВ та ЄП.";
+  } else if (fop === "2") {
+    ep = 1430 * months;
+    vz = income * 0.01;
+    limit = 2964000;
+    epLabel = `ЄП (фіксовано ${formatUAH(1430)} на міс)`;
+    reportMsg = "Щоквартальний звіт ЄП.";
+  } else if (fop === "1") {
+    ep = 346 * months;
+    vz = income * 0.01;
+    limit = 1670000;
+    epLabel = `ЄП (фіксовано ${formatUAH(346)} на міс)`;
+    reportMsg = "Щорічний звіт ЄП.";
+  }
 
-        }
+  const total = esv + ep + vz + pdv;
+  const left = limit - income;
+  const percentUsed = (income / limit * 100).toFixed(1);
 
+  infoDiv.innerHTML = `
+    Річний ліміт: <b>${formatUAH(limit)}</b><br>
+    Залишилось: <b>${formatUAH(left)}</b> (${percentUsed}% використано)<br>
+    🔔 <i>${reportMsg}</i>
+  `;
+
+  resultDiv.innerHTML = `
+      <strong>Результат:</strong><br>
+      ${epLabel}: <b>${formatUAH(ep)}</b><br>
+      ВЗ (1%): <b>${formatUAH(vz)}</b><br>
+      ЄСВ (1760 × ${months}): <b>${formatUAH(esv)}</b><br>
+      ${fop === "3_з_ПДВ" ? `${pdvLabel}: <b>${formatUAH(pdv)}</b><br>` : ""}
+      <hr>
+      Усього податків: <b>${formatUAH(total)}</b>
+  `;
+}
+        document.getElementById("fopType").addEventListener("change", calculate);
         incomeInput.addEventListener("input", calculate);
         periodSelect.addEventListener("change", calculate);
     </script>
