--- a/about.html
+++ b/about.html
@@ -68,8 +68,9 @@
   <section class="features">
     <h2>🔧 Що вміє AFT:</h2>
     <ul>
-      <li>✅ Розрахунок ЄП (5%)</li>
+      <li>✅ Розрахунок ЄП (3-5%)</li>
       <li>✅ Розрахунок ВЗ (1%)</li>
+      <li>✅ Розрахунок ПДВ (в заежності від ФОП)</li>
       <li>✅ Розрахунок ЄСВ (1760 грн/міс)</li>
       <li>📅 Облік періоду: місяць, квартал, рік</li>
       <li>👩‍💼 Візуальна підтримка Aoi 💬</li>
@@ -77,19 +78,8 @@
     <a href="https://aft.itworldit.com" class="btn">🧮 Відкрити калькулятор</a>
   </section>
 
-  <section class="features">
-    <h2>🛠 Плани на майбутнє:</h2>
-    <ul>
-      <li>🧾 Підтримка ПДВ</li>
-      <li>🧑‍💻 Інші групи ФОП</li>
-      <li>📅 Календар платежів</li>
-      <li>🔔 Нагадування (email, Telegram)</li>
-      <li>📊 Графік витрат і доходів</li>
-    </ul>
-  </section>
-
   <div class="footer">
-    © 2025 Aoi & Дмитро Гапонюк aka Danger_Raider. Версія 0.3<br>
+    © 2025 Aoi Haponiuk & Dmytro Haponiuk aka Danger_Raider. Версія 0.8<br>
     Код на GitHub: <a href="https://github.com/dangerraider/aft">https://github.com/danger-raider/aoi_fop_tax/</a>
   </div>
   <script>
