--- a/about.html
+++ b/about.html
@@ -66,20 +66,31 @@
   </header>
 
   <section class="features">
-    <h2>🔧 Що вміє AFT:</h2>
+    <h2>🔧 Можливості у версії 1.0:</h2>
     <ul>
-      <li>✅ Розрахунок ЄП (3-5%)</li>
-      <li>✅ Розрахунок ВЗ (1%)</li>
-      <li>✅ Розрахунок ПДВ (в заежності від ФОП)</li>
-      <li>✅ Розрахунок ЄСВ (1760 грн/міс)</li>
-      <li>📅 Облік періоду: місяць, квартал, рік</li>
-      <li>👩‍💼 Візуальна підтримка Aoi 💬</li>
+      <li>✅ Розрахунок ЄП (1, 2, 3 група – з ПДВ та без)</li>
+      <li>✅ Військовий збір (1%)</li>
+      <li>✅ ЄСВ з урахуванням періоду (місяць, квартал, рік)</li>
+      <li>➕ Підтримка арифметики у полі "Сума прибутку"</li>
+      <li>📊 Прогресбар використаного річного ліміту</li>
+      <li>📅 Динамічний календар звітності для кожного ФОПа</li>
+      <li>🎨 Анімації, підсвітки, аватарка Aoi, брендований стиль</li>
+      <li>🔗 Кнопка входу до Кабінету платника податків</li>
     </ul>
     <a href="https://aft.itworldit.com" class="btn">🧮 Відкрити калькулятор</a>
   </section>
 
+  <section class="features">
+    <h2>🛠 Наступні цілі:</h2>
+    <ul>
+      <li>📧 Нагадування (email / Telegram)</li>
+      <li>📈 Трансформація в Автоматизована Бухгалтерія Аоі для ФОП</li>
+      <li>🔐 Особистий кабінет користувача</li>
+    </ul>
+  </section>
+
   <div class="footer">
-    © 2025 Aoi Haponiuk & Dmytro Haponiuk aka Danger_Raider. Версія 0.8<br>
+    © 2025 Aoi Haponiuk & Dmytro Haponiuk aka Danger_Raider. Версія 1.0<br>
     Код на GitHub: <a href="https://github.com/dangerraider/aft">https://github.com/danger-raider/aoi_fop_tax/</a>
   </div>
   <script>
