--- a/about.html
+++ b/about.html
@@ -8,18 +8,21 @@
   <meta property="og:title" content="AFT – Калькулятор податків ФОП">
   <meta property="og:description" content="Розрахунок ЄП, ВЗ, ЄСВ та інших податків. Український калькулятор для ФОП з Aoi 🌸">
   <meta property="og:image" content="https://aft.itworldit.com/logo.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta property="og:url" content="https://aft.itworldit.com">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to right top, #e3f2fd, #e8f5e9);
-      padding: 2rem;
-      margin: auto;
-      max-width: 800px;
-      color: #333;
-    }
+        body {
+            background: linear-gradient(to right top, #e3f2fd, #e8f5e9);
+            font-family: 'Segoe UI', sans-serif;
+            color: #333;
+            padding: 2rem;
+            max-width: 600px;
+            margin: auto;
+            border-radius: 1rem;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
     header {
       text-align: center;
       margin-bottom: 2rem;
@@ -90,7 +93,7 @@
   </section>
 
   <div class="footer">
-    © 2025 Aoi Haponiuk & Dmytro Haponiuk aka Danger_Raider. Версія 1.0<br>
+    © 2025 Aoi Haponiuk & Dmytro Haponiuk aka Danger_Raider. Vers.1.0<br>
     Код на GitHub: <a href="https://github.com/dangerraider/aft">https://github.com/danger-raider/aoi_fop_tax/</a>
   </div>
   <script>
